--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -49,7 +49,7 @@ thead > tr > th {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.9);
+  background: rgba(0, 0, 0, .95);
   display: flex;
   align-items: center;
   justify-content: center;
